[package]
name = "open_weather_cache"
version = "0.1.0"
edition = "2021"

[features]
# use_remote_api = []

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
clap = { version = "3.1.6", features = ["derive"] }
humantime = "2.1"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
http = "0.2"
reqwest = { version = "0.11", features = ["blocking","json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
datetime = "0.5"

[dev-dependencies]
claim = "0.5.0"
